--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,41 +3,46 @@ name: Release y Changelog
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - 'v*.*.*'  # Se ejecuta cuando hacés push de un tag como v1.0.0, v1.0.1, etc.
 
 permissions:
-  contents: write
+  contents: write  # Necesario para crear releases en GitHub
 
 jobs:
   release:
+    name: Generar changelog y release
     runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
-      - uses: actions/setup-java@v3
+    steps:
+      - name: Checkout del código
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # Importante para ver todos los commits entre tags
+
+      - name: Configurar Java 23
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '23'
 
-      - uses: actions/setup-node@v4
+      - name: Configurar Node.js 20
+        uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
 
-      - name: Instalar dependencias
+      - name: Instalar dependencias de Node.js
         run: npm ci
 
-      - name: Build del JAR
+      - name: Compilar y generar JAR
         run: ./gradlew clean build --no-daemon
 
       - name: Crear carpeta de release
         run: mkdir -p release && cp build/libs/*.jar release/
 
-      - name: Generar changelog dinámico con release-it
+      - name: Generar changelog con release-it
         run: npx release-it --no-increment --ci --output changelog.md
 
-      - name: Leer changelog y guardarlo como variable
+      - name: Extraer changelog para el body del release
         id: changelog
         run: |
           echo "changelog<<EOF" >> $GITHUB_OUTPUT
