--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,10 +3,10 @@ name: Release y Changelog
 on:
   push:
     tags:
-      - 'v*.*.*'  # Ejecutar cuando se pushea un tag como v1.0.0, v1.0.1, etc.
+      - 'v*.*.*'  # Ejecutar al pushear un tag como v1.0.7
 
 permissions:
-  contents: write  # Necesario para crear releases
+  contents: write  # Necesario para crear releases en GitHub
 
 jobs:
   release:
@@ -17,12 +17,13 @@ jobs:
       - name: Checkout del código
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Traer todo el historial
+          fetch-depth: 0
 
-      - name: Cambiar a rama temporal desde el tag
+      - name: Cambiar a rama temporal desde el tag y configurar upstream
         run: |
           git fetch origin --force --tags
           git checkout -b temp-release ${{ github.ref_name }}
+          git branch --set-upstream-to=origin/main temp-release
 
       - name: Configurar Java 23
         uses: actions/setup-java@v3
@@ -65,5 +66,5 @@ jobs:
       - name: Eliminar rama temporal
         if: always()
         run: |
-          git checkout main
+          git checkout main || true
           git branch -D temp-release || true
