fix: update coverage and dependencies badget

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,14 +38,14 @@ jobs:
       - name: Build and Run Tests
         run: ./gradlew build test --no-daemon
 
-      - name: Generate Jacoco Report
-        run: ./gradlew jacocoTestReport
+      - name: Generate Jacoco Root Report
+        run: ./gradlew jacocoRootReport
 
-      - name: Upload Jacoco report
+      - name: Upload Jacoco Root Report
         uses: actions/upload-artifact@v4
         with:
-          name: jacoco-report
-          path: build/reports/jacoco/test/jacocoTestReport.xml
+          name: jacoco-root-report
+          path: build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml
 
       - name: Print Build Version
         run: ./gradlew printVersion
@@ -66,11 +66,11 @@ jobs:
           java-version: '23'
           distribution: 'temurin'
 
-      - name: Download Jacoco report
+      - name: Download Jacoco Root Report
         uses: actions/download-artifact@v4
         with:
-          name: jacoco-report
-          path: build/reports/jacoco/test
+          name: jacoco-root-report
+          path: build/reports/jacoco/jacocoRootReport
 
       - name: SonarCloud Analysis
         env:
@@ -81,4 +81,4 @@ jobs:
             -Dsonar.organization=marcoslozina \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.token=$SONAR_TOKEN \
-            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/test/jacocoTestReport.xml
+            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml
