--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,5 +90,6 @@ jobs:
             -Dsonar.sources=template-service/src/main/java,template-service/domain/src/main/java \
             -Dsonar.tests=template-service/src/test/java,template-service/domain/src/test/java \
             -Dsonar.exclusions=**/build/**,**/*.kt,**/resources/** \
+            -Dsonar.coverage.exclusions=**/Application.java \
             -Dsonar.test.inclusions=**/*Test.java \
             -Dsonar.java.binaries=template-service/build/classes/java/main,template-service/domain/build/classes/java/main
