fix: fix sonar issues binaries

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,9 +87,9 @@ jobs:
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.token=$SONAR_TOKEN \
             -Dsonar.coverage.jacoco.xmlReportPaths=${{ github.workspace }}/build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml \
-            -Dsonar.sources=template-service/src/main/java,template-service/domain/src/main/java \
-            -Dsonar.tests=template-service/src/test/java,template-service/domain/src/test/java \
+            -Dsonar.sources=template-service/src/main/java,domain/src/main/java,adapters/in/rest/src/main/java,adapters/out/messaging/src/main/java,adapters/out/persistence/src/main/java \
+            -Dsonar.tests=template-service/src/test/java,domain/src/test/java,adapters/in/rest/src/test/java \
             -Dsonar.exclusions=**/build/**,**/*.kt,**/resources/** \
             -Dsonar.coverage.exclusions=**/Application.java \
             -Dsonar.test.inclusions=**/*Test.java \
-            -Dsonar.java.binaries=template-service/build/classes/java/main,template-service/domain/build/classes/java/main
+            -Dsonar.java.binaries=domain/build/classes/java/main,adapters/in/rest/build/classes/java/main,adapters/out/messaging/build/classes/java/main,adapters/out/persistence/build/classes/java/main
