fix: update release please

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -12,10 +12,25 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+
     steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: temurin
+
+      - name: Grant execute permissions to gradlew
+        run: chmod +x ./gradlew
+
+      - name: Run tests before release
+        run: ./gradlew clean test
+
       - name: Run release-please
         uses: google-github-actions/release-please-action@v4
         with:
           release-type: simple
-          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
+          token: ${{ secrets.RELEASE_PLEASE_TOKEN }}  # o GITHUB_TOKEN si lo cambiás
           pull-request-title-pattern: "🚀 Release version ${version}"
