--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,83 +1,32 @@
-name: CI - Full Pipeline
+name: CI
 
 on:
   push:
-    branches: [main]
-    tags:
-      - 'v*.*.*'
+    branches:
+      - main
   pull_request:
-
-permissions:
-  contents: write
-
-env:
-  RUN_SONAR: ${{ vars.RUN_SONAR }}
 
 jobs:
   build:
-    name: Build & Test
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK
+        uses: actions/setup-java@v4
         with:
-          fetch-depth: 0
+          java-version: '21'
+          distribution: temurin
 
-      - name: Set up JDK 23
-        uses: actions/setup-java@v3
-        with:
-          java-version: '23'
-          distribution: 'temurin'
+      - name: Grant permission to Gradle
+        run: chmod +x template-service/gradlew
 
-      - name: Make Gradle executable
-        run: chmod +x ./gradlew
+      - name: Run tests and generate coverage
+        run: template-service/gradlew clean test jacocoRootReport
 
-      - name: Spotless Check
-        run: ./gradlew spotlessCheck
-
-      - name: Build and Run Tests
-        run: ./gradlew build test --no-daemon
-
-      - name: Generate Jacoco Root Report
-        run: ./gradlew jacocoRootReport
-
-      - name: Upload Jacoco Root Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: jacoco-root-report
-          path: build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml
-          if-no-files-found: error
-
-      - name: Print Build Version
-        run: ./gradlew printVersion
-
-  sonarcloud:
-    name: SonarCloud Analysis
-    runs-on: ubuntu-latest
-    needs: build
-    if: ${{ vars.RUN_SONAR == 'true' }}
-
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-
-      - name: Set up JDK 23
-        uses: actions/setup-java@v3
-        with:
-          java-version: '23'
-          distribution: 'temurin'
-
-      - name: Download Jacoco Root Report
-        uses: actions/download-artifact@v4
-        with:
-          name: jacoco-root-report
-          path: build/reports/jacoco/jacocoRootReport
-
-      - name: Confirm Jacoco File Exists
-        run: ls -lah build/reports/jacoco/jacocoRootReport
-
-      - name: SonarCloud Analysis
+      - name: Run SonarCloud analysis
+        working-directory: template-service
+        uses: SonarSource/sonarcloud-github-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: ./gradlew sonar
