--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,17 @@
+# Identificación del proyecto en SonarCloud
 sonar.projectKey=marcoslozina_template-service
 sonar.organization=marcoslozina
 sonar.host.url=https://sonarcloud.io
 sonar.token=${env.SONAR_TOKEN}
 
+# Código fuente y tests
 sonar.sources=domain/src/main/java,adapters/in/rest/src/main/java
 sonar.tests=domain/src/test/java,adapters/in/rest/src/test/java
 sonar.java.binaries=build/classes
 
+# Exclusiones
 sonar.exclusions=**/build/**,**/resources/**,**/*.kt
 sonar.coverage.exclusions=**/Application.java
+
+# Reporte de cobertura generado por Jacoco
 sonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml
