--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,10 +1,15 @@
-name: CI
+name: CI and Dependency Submission
 
 on:
   push:
     branches:
       - main
   pull_request:
+
+permissions:
+  contents: write
+  pull-requests: write
+  id-token: write
 
 jobs:
   build:
@@ -25,9 +30,14 @@ jobs:
       - name: Run tests and generate coverage
         run: template-service/gradlew clean test jacocoRootReport
 
-      - name: Run SonarCloud analysis
+      - name: SonarCloud analysis
         uses: SonarSource/sonarcloud-github-action@v2
         with:
           projectBaseDir: template-service
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+      - name: Submit dependency graph to GitHub
+        uses: gradle/actions/dependency-submission@v3
+        with:
+          build-root-directory: template-service
