--- a/.github/workflows/upload-jar.yml
+++ b/.github/workflows/upload-jar.yml
@@ -10,18 +10,19 @@ permissions:
 jobs:
   build-and-upload:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '23'
+          java-version: '21'
 
       - name: Build JAR
-        run: ./gradlew clean build
+        run: ./gradlew clean bootJar
 
       - name: Upload JAR to GitHub Release
         uses: softprops/action-gh-release@v1
