--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,4 +1,3 @@
-# Archivo de configuración para Dependabot en GitHub
 version: 2
 updates:
   - package-ecosystem: "gradle"
@@ -8,4 +7,4 @@ updates:
     open-pull-requests-limit: 5
     ignore:
       - dependency-name: "org.springframework.boot"
-        versions: [ "5.x" ]  # Evita actualizaciones mayores inesperadas
+        versions: ["5.x"]
