--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI and Dependency Submission
+name: CI
 
 on:
   push:
@@ -8,32 +8,72 @@ on:
 
 permissions:
   contents: write
+  checks: write
   pull-requests: write
   id-token: write
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up JDK
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: '21'
-          distribution: temurin
+          distribution: 'temurin'
 
-      - name: Grant permission to Gradle wrapper
+      # ❌ Desactivamos el cache usando un key único por ejecución (github.run_id)
+      - name: Disable Gradle cache (force fresh build)
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: no-cache-${{ runner.os }}-${{ github.run_id }}
+
+      - name: Grant execute permission for Gradle wrapper
         run: chmod +x ./gradlew
 
-      - name: Run tests and generate coverage
-        run: ./gradlew clean test jacocoRootReport
+      - name: Build and test
+        run: ./gradlew clean build test jacocoTestReport jacocoRootReport --no-daemon
 
-      - name: SonarCloud analysis
+      - name: Upload test report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: test-report
+          path: build/reports/tests/test/
+
+      - name: Upload Jacoco coverage report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: jacoco-report
+          path: build/reports/jacoco/
+
+      - name: SonarCloud Analysis
         uses: SonarSource/sonarcloud-github-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        with:
+          args: >
+            -Dsonar.projectKey=marcoslozina_template-service
+            -Dsonar.organization=marcoslozina
+            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml
 
-      - name: Submit dependency graph to GitHub
+      - name: Submit dependency graph
         uses: gradle/actions/dependency-submission@v3
+
+      - name: Check outdated dependencies and update badge
+        run: ./gradlew dependencyUpdates > deps.txt
+
+      - name: Upload badge to gist
+        uses: exuanbo/actions-dependency-review@v1
+        env:
+          GIST_ID: ${{ secrets.GIST_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
