--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      ########################################
+      # 🧱 Project setup & build
+      ########################################
+
       - name: Checkout code
         uses: actions/checkout@v4
 
@@ -26,11 +30,15 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Grant execute permission for Gradle wrapper
+      - name: Make Gradle wrapper executable
         run: chmod +x ./gradlew
 
-      - name: Build and test
+      - name: Run tests and generate coverage reports
         run: ./gradlew clean build test jacocoTestReport jacocoRootReport --no-daemon
+
+      ########################################
+      # 📦 Test and coverage reports
+      ########################################
 
       - name: Upload test report
         if: always()
@@ -46,6 +54,10 @@ jobs:
           name: jacoco-report
           path: build/reports/jacoco/
 
+      ########################################
+      # 📊 SonarCloud static code analysis
+      ########################################
+
       - name: SonarCloud Analysis
         uses: SonarSource/sonarcloud-github-action@v5
         env:
@@ -57,13 +69,21 @@ jobs:
             -Dsonar.host.url=https://sonarcloud.io
             -Dsonar.coverage.jacoco.xmlReportPaths=build/reports/jacoco/jacocoRootReport/jacocoRootReport.xml
 
+      ########################################
+      # 📥 Submit dependency graph to GitHub
+      ########################################
+
       - name: Submit dependency graph
         uses: gradle/actions/dependency-submission@v4
 
-      - name: Check outdated dependencies
+      ########################################
+      # 📌 Check outdated dependencies
+      ########################################
+
+      - name: Run Gradle dependency updates
         run: ./gradlew dependencyUpdates > deps.txt
 
-      - name: Upload dependency report to Gist
+      - name: Upload dependency status to Gist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -71,26 +91,33 @@ jobs:
             -H "Authorization: token $GITHUB_TOKEN" \
             -H "Content-Type: application/json" \
             -d @- <<EOF
-          {
-            "files": {
-              "dependencies.json": {
-                "content": "$(cat deps.txt)"
-              }
-            }
-          }
-          EOF
+  {
+    "files": {
+      "dependencies.json": {
+        "content": "$(cat deps.txt)"
+      }
+    }
+  }
+  EOF
 
-      - name: Actualizar badge de vulnerabilidades (Gist)
-        run: |
-          echo "Contando alertas de Dependabot..."
-          count=$(gh api /repos/${{ github.repository }}/dependabot/alerts --paginate | jq length)
-          echo "{\"vulnerabilities\": $count}" > security.json
+########################################
+# 🔐 Update security badge (Dependabot alerts)
+########################################
 
-          echo "Actualizando Gist..."
-          curl -X PATCH https://api.github.com/gists/a593e52d50f687d909316b2e77e7370a \
-            -H "Authorization: Bearer ${{ secrets.GIST_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d @- <<EOF
+- name: Update vulnerabilities badge (Gist)
+  env:
+    GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    GIST_TOKEN: ${{ secrets.GIST_TOKEN }}
+  run: |
+    echo "Counting open Dependabot alerts..."
+    count=$(gh api /repos/${{ github.repository }}/dependabot/alerts --paginate | jq length)
+    echo "{\"vulnerabilities\": $count}" > security.json
+
+    echo "Updating Gist file..."
+    curl -X PATCH https://api.github.com/gists/a593e52d50f687d909316b2e77e7370a \
+      -H "Authorization: Bearer $GIST_TOKEN" \
+      -H "Content-Type: application/json" \
+      -d @- <<EOF
   {
     "files": {
       "security.json": {
@@ -99,5 +126,3 @@ jobs:
     }
   }
   EOF
-env:
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
